Updated page structure

--- a/webroot/css/paramagnon.css
+++ b/webroot/css/paramagnon.css
@@ -1,14 +1,77 @@
+.sidenav {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+/* Style the sidenav links and the dropdown button */
+.sidenav a, .dropdown-btn {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  /* On mouse-over */
+  .sidenav a:hover, .dropdown-btn:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Main content */
+  .main {
+    margin-left: 200px; /* Same as the width of the sidenav */
+    font-size: 20px; /* Increased text to enable scrolling */
+    padding: 0px 10px;
+  }
+  
+  /* Add an active class to the active dropdown button */
+  .active {
+    background-color: green;
+    color: white;
+  }
+  
+  /* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+  .dropdown-container {
+    display: none;
+    background-color: #262626;
+    padding-left: 8px;
+  }
+    
+
+
+
+
+
+
+
+
+
+
+
 .sidebar{
     margin: 0;
     padding: 0;
     width: 250px; 
     background-color: #2578ec;
     position: fixed;
+    z-index: 1;
     height: 100%; 
     overflow: auto;
 }
 
-.sidebar a {
+.sidebar a, .dropdown-btn {
     display: block; 
     color: white;
     padding: 10px;
@@ -23,16 +86,22 @@
     text-align: center;
 }
 
-
 .sidebar a.active {
     background-color: #7DB3FF;
     color: black;
 }
 
-.sidebar a:hover:not(.active) {
+.sidebar a:hover:not(.active), .dropdown-btn:hover:not(.active) {
     background-color: #4a81f7;
     color: white;
 }
+
+.dropdown-container {
+    display: none;
+    background-color: #262626;
+    padding-left: 8px;
+}
+
 
 div.content {
     margin-left: 250px;    
