--- a/webroot/css/paramagnon.css
+++ b/webroot/css/paramagnon.css
@@ -1,120 +1,95 @@
-.sidenav {
-    height: 100%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #818181;
-    display: block;
-    border: none;
-    background: none;
-    width: 100%;
-    text-align: left;
-    cursor: pointer;
-    outline: none;
-  }
-  
-  /* On mouse-over */
-  .sidenav a:hover, .dropdown-btn:hover {
-    color: #f1f1f1;
-  }
-  
-  /* Main content */
-  .main {
-    margin-left: 200px; /* Same as the width of the sidenav */
-    font-size: 20px; /* Increased text to enable scrolling */
-    padding: 0px 10px;
-  }
-  
-  /* Add an active class to the active dropdown button */
-  .active {
-    background-color: green;
-    color: white;
-  }
-  
-  /* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-  .dropdown-container {
-    display: none;
-    background-color: #262626;
-    padding-left: 8px;
-  }
-    
-
-
-
-
-
-
-
-
-
-
-
 .sidebar{
-    margin: 0;
-    padding: 0;
-    width: 250px; 
-    background-color: #2578ec;
-    position: fixed;
-    z-index: 1;
-    height: 100%; 
-    overflow: auto;
+  width: 250px;
+  margin: 0; 
+  padding: 0;
+  position: fixed;
+  background: #2578ec;
+  height: 100%;
+  overflow: auto;
+  list-style: none;
+  scrollbar-gutter: stable;
 }
 
-.sidebar a, .dropdown-btn {
-    display: block; 
-    color: white;
-    padding: 10px;
-    text-decoration: none;
-    text-align: center;
-    float: bottom;
-}
 .sidebar h1 {
-    display: block;
-    padding: 10px;
-    margin-top: 120px;
-    text-align: center;
+  display: block;
+  padding: 10px;
+  margin-top: 120px;
+  text-align: center;
 }
 
-.sidebar a.active {
-    background-color: #7DB3FF;
-    color: black;
+.sidebar li {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  float: left;
+  line-height: 20px;
+  position: relative;
+  color: white;
 }
 
-.sidebar a:hover:not(.active), .dropdown-btn:hover:not(.active) {
-    background-color: #4a81f7;
+.sidebar li a {
+  padding: 10px;
+  float: bottom;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  display: block;
+  -o-transition: color .3s linear, background .3s linear;
+  -webkit-transition: color .3s linear, background .3s linear;
+  -moz-transition: color .3s linear, background .3s linear;
+  transition: color .3s linear, background .3s linear;  
+}
+
+.sidebar li:hover:not(.active) > a{    
+  background-color:#4a81f7;
+  color: white;
+}
+
+.sidebar li.active > a{
+  background-color:#7DB3FF;
+  color:black;
+}
+  
+.sidebar ul, .sidebar ul li ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;    
+    display: none;
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    background: #4a81f7;
+    position: static;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box; 
+    -webkit-box-sizing:border-box; 
+}
+
+.sidebar ul{
+    top: 50px;
+    left: 0;
+}
+
+.sidebar ul li{
+    clear:both;
+    width:100%;
+}
+
+.sidebar ul li a {
+    width:100%;    
+    display:block;
+    float:left;
+    clear:both;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box; 
+    -webkit-box-sizing:border-box;
+}
+
+.sidebar ul li:hover > a{
+    background:rgb(229,228,226);
     color: white;
 }
-
-.dropdown-container {
-    display: none;
-    background-color: #262626;
-    padding-left: 8px;
-}
-
-
-div.content {
-    margin-left: 250px;    
-    padding: 60px 16px;
-    height: 1000px;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-}
-
-
 
 @media screen and (max-width: 700px) {
     .sidebar {
@@ -122,14 +97,30 @@ body {
         height: auto;
         position: relative;
     }
-    .sidebar a {float: left;}
-    .sidebar h1 {margin-top: 0px;}
-    div.content {margin-left: 0;}
-}
-
-@media screen and (max-width: 400px) {
     .sidebar a {
         text-align: center;
         float: none;
     }
+    .sidebar h1 {margin-top: 0px;}
+    div.content {margin-left: 0;}
 }
+
+.sidebar li:hover ul, .sidebar li:hover ul li ul {
+    display:block;
+    font-size:smaller;
+  }
+ 
+  
+div.content {
+    margin-left: 250px;    
+    padding: 60px 16px;
+    height: 1000px;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+
+  
