--- a/webroot/css/paramagnon.css
+++ b/webroot/css/paramagnon.css
@@ -91,20 +91,6 @@
     color: white;
 }
 
-@media screen and (max-width: 700px) {
-    .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-    }
-    .sidebar a {
-        text-align: center;
-        float: none;
-    }
-    .sidebar h1 {margin-top: 0px;}
-    div.content {margin-left: 0;}
-}
-
 .sidebar li:hover ul, .sidebar li:hover ul li ul {
     display:block;
     font-size:smaller;
@@ -122,5 +108,20 @@ body{
     padding: 0;
 }
 
-
+@media screen and (max-width: 700px) {
+  .sidebar {
+      width: 100%;
+      height: auto;
+      position: relative;
+  }
+  .sidebar a {
+      text-align: center;
+      float: none;
+  }
+  .sidebar h1 {margin-top: 0px;}
+  div.content {
+    margin-left: 0;
+    padding: 0; 
+  }    
+}
   
