--- a/webroot/css/paramagnon.css
+++ b/webroot/css/paramagnon.css
@@ -1,5 +1,5 @@
 .sidebar{
-  width: 250px;
+  width: 300px;
   margin: 0; 
   padding: 0;
   position: fixed;
@@ -15,6 +15,7 @@
   padding: 10px;
   margin-top: 120px;
   text-align: center;
+  font-size: xxx-large;
 }
 
 .sidebar li {
@@ -33,7 +34,8 @@
   float: bottom;
   text-align: center;
   color: white;
-  text-decoration: none;
+  font-size: x-large;
+  text-decoration: none;  
   display: block;
   -o-transition: color .3s linear, background .3s linear;
   -webkit-transition: color .3s linear, background .3s linear;
@@ -79,6 +81,7 @@
 .sidebar ul li a {
     width:100%;    
     display:block;
+    font-size: large;
     float:left;
     clear:both;
     box-sizing:border-box;
@@ -98,9 +101,23 @@
  
   
 div.content {
-    margin-left: 250px;    
+    margin-left: 300px;    
     padding: 60px 16px;
     height: 1000px;
+}
+
+div.content h1 {
+  padding-bottom: 40px;
+  font-size: xxx-large;
+  text-align: center;
+}
+div.content h2 {
+  padding-left: 50px;
+}
+div.content p {
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: larger;
 }
 
 body{
